<resources>
    <string name="app_name">pomodoro</string>
    <string name="login_with_google">Login with Google Account</string>
    <string name="app_slogan">stay focused, be present</string>
    <string name="hello_string">Good morning, Linh!</string>
    <string name="level">Level</string>
    <string name="level_taken_xp">You need %exp% more exp to level up!</string>
    <string name="my_friends_title">My Friends</string>
    <string name="friend_requests">%amount% friend requests</string>
    <string name="my_plants_title">My Plants</string>
    <string name="type_plant">Plant</string>
    <string name="type_flower">Flower</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="user_account_email">User\'s Account Email</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="your_friend_request">Your friend request</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="statistics">Statistics</string>
    <string name="studying_hour">Studying Hour</string>
    <string name="average_studying_time">Average Studying Time</string>
    <string name="average_received_coin">Average Received Coin</string>
    <string name="favourite_pomodoro_method">Favourite Pomodoro Method</string>
    <string name="academic_record">Academic Record</string>
    <string name="gpa">GPA</string>
    <string name="rank_of_degree">Rank of Degree</string>
    <string name="your_performance">Your Performance</string>
    <string name="records">Records</string>
    <string name="add_record">Add Record</string>
    <string name="add_academic_record">Add Academic Record</string>
    <string name="subject_name">Subject Name</string>
    <string name="semester">Semester</string>
    <string name="score">Score</string>
    <string name="shop">Shop</string>
    <string name="buy">Buy</string>
    <string name="pomodoro_study">Pomodoro Study</string>
    <string name="show">Show</string>
    <string name="method">Method</string>
    <string name="studying_time">Studying Time</string>
    <string name="edit">Edit</string>
    <string name="background_music">Background Music</string>
    <string name="you_can_get_total">You can get total</string>
    <string name="when_finishing_this_study_period">when finishing this study period</string>
    <string name="start_studying">Start Studying</string>
    <string name="coin_per_phase">Coin per phase</string>
    <string name="exp_per_phase">Experience per phase</string>
    <string name="select">Select</string>
    <string name="study_garden">Study Garden</string>
    <string name="select_pomodoro_method">Select Pomodoro Method</string>
    <string name="pomodoro_25_5_description">Study 25 mins, break 5 mins, repeatedly</string>
    <string name="pomodoro_50_10_description">Study 50 mins, break 10 mins, repeatedly</string>
    <string name="close">Close</string>
    <string name="hours_and_minutes">%hours% hours %minutes% minutes</string>
    <string name="select_background_music">Select Background Music</string>
    <string name="now_playing">Now Playing</string>
    <string name="studying_phase">Studying Phase</string>
    <string name="break_phase">Break Phase</string>
    <string name="stop_studying">Stop Studying</string>
    <string name="when_finishing_this_phase">when finishing this phase</string>
    <string name="cannot_navigate_while_studying">You cannot navigate to other pages while being in studying period</string>
    <string name="xp">XP</string>
    <string name="plant_fetch_error">An unexpected error has occured while trying to fetch all plants from database. Error: %error%</string>
    <string name="splash_screen_fetching_plant">Fetching plants data from database...</string>
    <string name="splash_screen_download_lang_packet">Downloading \'%lang%\' language packet ...</string>
    <string name="splash_screen_connect_database">Connecting to database ...</string>
    <string name="login">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dont_have_an_account">Do not have an account?</string>
    <string name="create_new_account"><u>Create a new account</u></string>
    <string name="authentication_failed">Authentication Failed. Email or password is not correct.</string>
    <string name="register">Sign Up</string>
    <string name="displayname">Display Name</string>
    <string name="repassword">Confirm Password</string>
    <string name="already_have_account">Already had an account?</string>
    <string name="back_to_sign_in"><u>Back to sign in</u></string>
    <string name="password_not_match">Password does not match.</string>
    <string name="register_success">Created the accout successfully. Please back to sign in.</string>
    <string name="register_fail">Failed to create new account. Maybe an account with this email has existed.</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very good</string>
    <string name="good">Good</string>
    <string name="ordinary">Ordinary</string>
    <string name="splash_screen_fetching_song">Fetching songs data from database...</string>
    <string name="song_fetch_error">An unexpected error has occured while trying to fetch all songs from database. Error: %error%</string>
    <string name="owned_all">You have owned all items</string>
    <string name="not_enough_money">You don\'t have enough coin</string>
    <string name="finish_phase_noti_title">You have just finished a Pomodoro phase!</string>
    <string name="finish_phase_noti_content">Having finished a %phase%, you\'ve just got %coin% coins and %exp% exp.</string>
</resources>