<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="270dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/garden_action_sheet_background"
    android:padding="@dimen/standard_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:fontFamily="@font/madani"
        android:textFontWeight="@integer/font_semi_bold"
        android:text="@string/select_pomodoro_method"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <com.google.android.flexbox.FlexboxLayout
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/twenty_five_out_of_five_method"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/twenty_five_out_of_five"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="10sp"
                android:textFontWeight="@integer/font_regular"
                android:fontFamily="@font/madani"
                android:gravity="center"
                android:text="@string/pomodoro_25_5_description"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            app:flexDirection="column"
            app:alignItems="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/fifty_out_of_ten_method"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/fifty_out_of_ten"/>
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textFontWeight="@integer/font_regular"
                android:fontFamily="@font/madani"
                android:text="@string/pomodoro_50_10_description"
                />
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

    <neu.provl.pomodoro.components.FrameButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:textSize="10sp"
        app:text="@string/close"/>

</LinearLayout>