<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="324dp"
    android:layout_height="472dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    android:orientation="vertical"
    android:background="@drawable/twentydp_primary_background"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_plant_layout_background"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/arrow_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:textFontWeight="@integer/font_bold"
            android:fontFamily="@font/madani"
            android:textColor="@color/white"
            android:text="@string/my_plants_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:weightSum="2">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/plant_image"
                android:layout_gravity="bottom"
                android:layout_width="130dp"
                android:layout_height="130dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/plant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@font/madani"
                android:textFontWeight="@integer/font_bold"
                android:textColor="@color/white"
                android:lines="1"
                android:text="%plant_name%"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/madani"
                android:textFontWeight="@integer/font_medium"
                android:textColor="@color/white"
                android:text="@string/type_plant"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/plant_coin_per_phase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="@font/madani"
                    android:textFontWeight="@integer/font_bold"
                    android:textColor="@color/white"
                    android:lines="1"
                    android:text="%coin%"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/leaf"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/madani"
                android:textFontWeight="@integer/font_medium"
                android:textColor="@color/white"
                android:text="@string/coin_per_phase"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/plant_xp_per_phase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="@font/madani"
                    android:textFontWeight="@integer/font_bold"
                    android:textColor="@color/white"
                    android:lines="1"
                    android:text="%xp%"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/madani"
                    android:textFontWeight="@integer/font_thin"
                    android:textColor="@color/white"
                    android:lines="1"
                    android:text="@string/xp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/madani"
                android:textFontWeight="@integer/font_medium"
                android:textColor="@color/white"
                android:text="@string/exp_per_phase"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        app:flexDirection="column"
        app:justifyContent="space_between"
        app:alignItems="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/garden_action_sheet_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/standard_padding"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/plant_previous_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_arrow_left"/>

            <TextView
                android:id="@+id/plant_description"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textFontWeight="@integer/font_light"
                android:textStyle="italic"
                android:fontFamily="@font/madani"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/plant_next_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/circle_arrow_right"/>
        </LinearLayout>

        <neu.provl.pomodoro.components.FrameButton
            android:id="@+id/plant_select_button"
            android:layout_width="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_height="wrap_content"
            app:textSize="14sp"
            app:text="@string/select"/>
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>